--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aditya Pandya - Product Leader & Advisor</title>
     
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    
     <!-- SEO Meta Tags -->
     <meta name="description" content="Aditya Pandya - Product leader & advisor with 15+ years of experience building products that help 100M+ people globally.">
     <meta name="keywords" content="product leader, product management, Aditya Pandya">
