--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
   <meta property="og:title" content="Aditya Pandya - Product Leader">
   <meta property="og:description" content="Product leader with 15+ years of experience building products that help 100M+ people globally.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://yoursite.com">
+  <meta property="og:url" content="https://aditya.pandya.co">
+  <meta name="theme-color" content="#0a0a0a" media="(prefers-color-scheme: dark)">
+  <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-NDCMBB8TEX"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
