--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@600&family=Over+the+Rainbow&family=Raleway:wght@300;400;500;600&family=Rock+Salt&family=Reenie+Beanie&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@600&family=Over+the+Rainbow&family=Raleway:wght@300;400;500;600&family=Rock+Salt&family=Reenie+Beanie&family=Quicksand:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
   <style>
@@ -594,6 +594,11 @@
       color: #D97700;
     }
 
+    .quote-font {
+        font-family: 'Quicksand', sans-serif; 
+        font-weight: 500;
+    }
+    
     .quote-mark {
       position: absolute;
       font-size: 12rem;
@@ -878,9 +883,9 @@
         font-size: 1.3rem; /* Smaller card titles */
       }
 
-      .tag-container {
+      /* .tag-container {  <-- Remove or comment out this line
          justify-content: flex-start;
-      }
+      } */
 
       .accent-section {
         padding: 60px 0; /* Reduced padding on accent section */
@@ -936,25 +941,25 @@
         }
     }
     @media (max-width: 480px){
-        .name-title{
-            font-size: 36px;
-        }
-        .timeline-date, .timeline-subtitle{
-            font-size: 0.8rem;
-        }
-        .timeline-title{
-            font-size: 1.1rem;
-        }
-        .r-hex {
-          width: 12em;     /* Even Smaller hexagon */
-          height: 10.392em;  /* Proportional height */
-        }
-
-        .r-hex-inner-2:before {
-            margin-top: -0.89em;
-            height: 12em;
-        }
+    .name-title{
+        font-size: 36px;
     }
+    .timeline-date, .timeline-subtitle{
+        font-size: 0.8rem;
+    }
+    .timeline-title{
+        font-size: 1.1rem;
+    }
+      .r-hex {
+      width: 12em;     /* Even Smaller hexagon */
+      height: 10.392em;  /* Proportional height */
+    }
+
+    .r-hex-inner-2:before {
+        margin-top: -0.89em;
+        height: 12em;
+    }
+}
 
   </style>
 </head>
@@ -1054,7 +1059,7 @@
         <div class="section-heading-container">
             <h2 class="accent-heading">My Mission</h2>
         </div>
-        <p class="accent-text">
+        <p class="accent-text quote-font">
           Create meaningful societal impact through thoughtful technology, simplify everyday experiences and inspire teams to achieve what once seemed impossible.
         </p>
       </div>
