--- a/resume/index.html
+++ b/resume/index.html
@@ -186,20 +186,12 @@
         }
 
         .resume-container {
-            background-color: var(--bg-card);
-            border-radius: 16px;
-            padding: 30px;
-            border: 1px solid var(--border);
-            transition: all 0.3s ease;
             width: 90%;
-            max-width: 500px;
+            max-width: 550px;
             margin: 0 auto;
-        }
-
-        .resume-container:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 15px 30px rgba(127, 90, 240, 0.15);
-            border-color: var(--primary);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
         .thumbnail {
@@ -219,7 +211,8 @@
         }
 
         .btn {
-            width: 100%;
+            width: 60%;
+            max-width: 300px;
             padding: 12px 24px;
             background: linear-gradient(90deg, var(--primary), var(--accent-3));
             color: white;
@@ -292,7 +285,6 @@
         /* Mobile Styles */
         @media (max-width: 768px) {
             .resume-container {
-                padding: 24px;
                 max-width: 90%;
             }
         }
@@ -303,6 +295,7 @@
             }
             
             .btn {
+                width: 80%;
                 font-size: 0.9rem;
                 padding: 10px 18px;
             }
