--- a/resume/index.html
+++ b/resume/index.html
@@ -202,6 +202,16 @@
             position: relative;
             border-radius: 8px;
             background-color: white;
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+        }
+
+        /* Subtle border that adapts to theme */
+        html[data-theme="dark"] .thumbnail {
+            border: 1px solid rgba(255, 255, 255, 0.05);
+        }
+
+        html[data-theme="light"] .thumbnail {
+            border: 1px solid rgba(0, 0, 0, 0.08);
         }
 
         .thumbnail img, .thumbnail canvas {
