--- a/index.html
+++ b/index.html
@@ -1093,6 +1093,58 @@
     </div>
   </section>
 
+  <section id="experience" class="section">
+    <div class="container">
+      <div class="section-heading-container">
+        <h2 class="section-heading">Experience</h2>
+      </div>
+      <div class="timeline">
+        <div class="timeline-item">
+          <div class="timeline-date">May 2023 - Present</div>
+          <h3 class="timeline-title">Product Advisor</h3>
+          <div class="timeline-subtitle">Various Startups</div>
+          <p>Currently partnering with innovative startups to overcome challenges and accelerate growth. I love helping founders translate their vision into products that customers genuinely value.</p>
+        </div>
+        <div class="timeline-item">
+          <div class="timeline-date">Jul 2022 - May 2023</div>
+          <h3 class="timeline-title">Senior Director of Product</h3>
+          <div class="timeline-subtitle">Indeed</div>
+          <p>Directed a phenomenal team of 12 PMs and leaders, creating experiences that connected millions of job seekers with the right employers. Revitalized Indeed's Profile platform and pioneered AI-driven experiences that made job seeking more personal and productive.</p>
+        </div>
+        <div class="timeline-item">
+          <div class="timeline-date">Oct 2019 - Jun 2022</div>
+          <h3 class="timeline-title">Director of Product</h3>
+          <div class="timeline-subtitle">Indeed</div>
+          <p>Led a team of 8 PMs to transform how people apply for jobs worldwide by reimagining Indeed's application experience. Seeing our Interview Scheduling product grow from concept to facilitating 10M+ interviews annually showed how the right product can remove friction that holds people back.</p>
+        </div>
+        <div class="timeline-item">
+          <div class="timeline-date">Jan 2018 - Sep 2019</div>
+          <h3 class="timeline-title">Senior Manager of Product</h3>
+          <div class="timeline-subtitle">Indeed</div>
+          <p>Guided a talented team of 5 PMs to transform Indeed's job application platform, growing from 300M to over 1B applications annually. Pioneered machine learning approaches that significantly improved match quality, creating better connections between job seekers and employers while driving substantial revenue growth.</p>
+        </div>
+        <div class="timeline-item">
+          <div class="timeline-date">Feb 2016 - Dec 2017</div>
+          <h3 class="timeline-title">Product Manager</h3>
+          <div class="timeline-subtitle">Indeed</div>
+          <p>Reimagined Indeed's flagship "Easily Apply" platform, focusing on creating seamless experiences that helped more people find meaningful work. Launched an innovative developer program that extended our reach to partner career sites, significantly expanding job opportunities while generating new revenue streams.</p>
+        </div>
+        <div class="timeline-item">
+          <div class="timeline-date">Apr 2014 - Jan 2016</div>
+          <h3 class="timeline-title">Product Manager</h3>
+          <div class="timeline-subtitle">MakeMyTrip</div>
+          <p>Drove product vision for India's #1 travel platform, creating mobile-first experiences that delighted travelers and significantly increased engagement. Seeing our apps featured by both Apple and Google validated my focus on creating intuitive, enjoyable booking experiences.</p>
+        </div>
+        <div class="timeline-item">
+          <div class="timeline-date">May 2010 - Feb 2014</div>
+          <h3 class="timeline-title">Product & UX Manager</h3>
+          <div class="timeline-subtitle">Directi</div>
+          <p>Managed growth for Flock and BigRock, helping people communicate more effectively and establish their online presence. Grew Flock to 1.5M monthly active users by focusing on creating genuine value for teams looking to collaborate more effectively.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <section id="achievements" class="section">
     <div class="container">
         <div class="section-heading-container">
