--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Aditya Pandya - Product Leader & Advisor</title>
 
+  <!-- Favicon and manifest -->
   <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
@@ -25,14 +26,16 @@
   <meta name="theme-color" content="#0a0a0a" media="(prefers-color-scheme: dark)">
   <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
   
+  <!-- Google Analytics - External scripts -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-NDCMBB8TEX"></script>
-  <script src="js/analytics.js"></script>
 
+  <!-- Font and Icon imports -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&family=Over+the+Rainbow&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Over+the+Rainbow&family=Poppins:wght@400;500;600;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
+  <!-- CSS file -->
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -289,6 +292,8 @@
     </div>
   </footer>
 
+  <!-- JavaScript -->
+  <script src="js/analytics.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
