--- a/resume/index.html
+++ b/resume/index.html
@@ -25,11 +25,15 @@
     <meta property="og:url" content="https://aditya.pandya.co/resume">
     <meta name="theme-color" content="#0a0a0a" media="(prefers-color-scheme: dark)">
     <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
+    
+    <!-- Google Analytics - External script -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NDCMBB8TEX"></script>
 
     <!-- Font and Icon imports -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@600&family=Over+the+Rainbow&family=Raleway:wght@300;400;500;600&family=Rock+Salt&family=Reenie+Beanie&family=Quicksand:wght@400;500;700&display=swap" rel="stylesheet">
+    <!-- Updated font imports for Modern Contrast with lighter body font (Inter) -->
+    <link href="https://fonts.googleapis.com/css2?family=Over+the+Rainbow&family=Poppins:wght@400;500;600;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <!-- Link to the centralized CSS file -->
@@ -69,6 +73,8 @@
 
     <!-- JavaScript files -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.min.js"></script>
+    <script src="../js/analytics.js"></script>
+    <script src="../js/resume-analytics.js"></script>
     <script src="../js/main.js"></script>
     <script src="../js/resume.js"></script>
 </body>
