--- a/resume/index.html
+++ b/resume/index.html
@@ -242,11 +242,11 @@
     </style>
 </head>
 <body class="resume-page">
-    <nav class="nav">
+<nav class="nav">
     <div class="nav-container">
         <a href="../" class="nav-logo">Aditya Pandya</a>
         <div class="nav-links">
-            <a href="../" class="nav-link">Back</a>
+            <a href="../" class="nav-link">Back to Main Site</a>
             <button class="theme-toggle" id="themeToggle" aria-label="Toggle dark/light mode">
                 <i class="fas fa-sun"></i>
             </button>
