--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
   <!-- CSS file -->
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
   <nav class="nav">
@@ -293,7 +293,7 @@
   </footer>
 
   <!-- JavaScript -->
-  <script src="js/analytics.js"></script>
-  <script src="js/main.js"></script>
+  <script src="assets/js/analytics.js"></script>
+  <script src="assets/js/main.js"></script>
 </body>
 </html>
