--- a/resume/index.html
+++ b/resume/index.html
@@ -36,7 +36,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <!-- Main CSS -->
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
     
     <!-- Resume-specific styles to maintain the original design -->
     <style>
@@ -280,10 +280,10 @@
         const savedTheme = localStorage.getItem('theme') || 'dark';
         document.documentElement.setAttribute('data-theme', savedTheme);
     </script>
-    <script src="../js/analytics.js"></script>
-    <script src="../js/browser-detect.js"></script>
-    <script src="../js/resume-analytics.js"></script>
-    <script src="../js/main.js"></script>
-    <script src="../js/resume.js"></script>
+    <script src="../assets/js/analytics.js"></script>
+    <script src="../assets/js/browser-detect.js"></script>
+    <script src="../assets/js/resume-analytics.js"></script>
+    <script src="../assets/js/main.js"></script>
+    <script src="../assets/js/resume.js"></script>
 </body>
 </html>
