Update index.html to update meta tags

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aditya Pandya - Product Leader & Advisor</title>
+  <title>Aditya Pandya • Product Leader & Advisor • $6B+ Revenue Impact • Building for 100M+ People</title>
 
   <!-- Favicon and manifest -->
   <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
@@ -11,23 +11,28 @@
   <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
   <link rel="manifest" href="assets/manifest/site.webmanifest">
 
-  <meta name="description" content="Aditya Pandya - Product leader & advisor with 15+ years of experience building products that help 100M+ people globally.">
-  <meta name="keywords" content="product leader, product management, Aditya Pandya">
+  <meta name="description" content="Product Leader with 15+ years experience scaling marketplaces and consumer products to 100M+ people. Expertise in AI/ML applications, growth strategies, and building high-performance teams that drive $6B+ in revenue.">
+  <meta name="keywords" content="Aditya Pandya, product leader, product management, growth advisor, B2C platforms, marketplaces, Aditya Pandya, AI/ML product strategy, evidence-driven development, team leadership, Indeed, MakeMyTrip, distributed teams">
   <meta name="author" content="Aditya Pandya">
 
   <meta name="robots" content="noai, noimageai">
   <meta name="googlebot" content="noai, noimageai">
   <meta name="Bingbot" content="noai, noimageai">
 
-  <meta property="og:title" content="Aditya Pandya - Product Leader">
-  <meta property="og:description" content="Product leader with 15+ years of experience building products that help 100M+ people globally.">
+  <meta property="og:title" content="Aditya Pandya • Product Leader & Advisor • $6B+ Impact">
+  <meta property="og:description" content="Product Leader with 15+ years that transformed Indeed, MakeMyTrip, and Directi. Simplified complexity for 100M+ people, scaled products 10x, and led teams of 150+ across global markets.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://aditya.pandya.co">
+  <meta property="og:image" content="https://aditya.pandya.co/assets/images/ap.jpeg">
+  <meta name="industry" content="HR Tech, Marketplaces, Product Management, B2C">
+  <meta name="specialty" content="Product Strategy, Growth, AI/ML Applications, Team Leadership">
+  <meta name="experience" content="Indeed, MakeMyTrip, Directi, Startup Advisor">
   <meta name="theme-color" content="#0a0a0a" media="(prefers-color-scheme: dark)">
   <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
   
   <!-- Google Analytics - External scripts -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-NDCMBB8TEX"></script>
+  <script src="/assets/js/schema-loader.js"></script>
 
   <!-- Font and Icon imports -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
