Update index.html - fixed minor typo on line 113

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           </p>
         </div>
         <p><br>
-          Currently, I proide strategic guidance to forward-thinking startups focused on Marketplaces, HR Tech, and Automotive, helping them navigate growth challenges and scale their product offerings. I'm particularly drawn to opportunities that blend innovation with meaningful societal impact, creating products that remove friction from everyday experiences while driving extraordinary results.
+          Currently, I provide strategic guidance to forward-thinking startups focused on Marketplaces, HR Tech, and Automotive, helping them navigate growth challenges and scale their product offerings. I'm particularly drawn to opportunities that blend innovation with meaningful societal impact, creating products that remove friction from everyday experiences while driving extraordinary results.
         </p>
       </div>
     </div>
