Update index.html to fix more minor typos

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           <div class="tag">Product Vision & Strategy</div>
           <div class="tag">Organizational Transformation</div>
           <div class="tag">Cross-Functional Leadership</div>
-          <div class="tag">Leading Distributed Teams</div>
+          <div class="tag">Leading Distributed Teams (6+ Countries)</div>
           <div class="tag">Managing Product Leaders</div>
         </div>
       </div>
@@ -267,7 +267,7 @@
           <div class="card-content">
             <h3 class="card-title">Reinventing Marketplace Dynamics</h3>
             <div class="card-paragraph">
-              At Indeed, I led a fundamental shift that transformed the company's flagship job application platform from a volume-focused to a quality-centered marketplace, challenging a decade and half of company orthodoxy around "ease above all else.
+              At Indeed, I led a fundamental shift that transformed the company's flagship job application platform from a volume-focused to a quality-centered marketplace, challenging a decade and a half of company orthodoxy around "ease above all else.
             </div>
             <div class="card-paragraph">
               This vision required aligning 20+ cross-functional teams across six countries and reimagining the job seeking and hiring journey for 45M+ job seekers and 2M+ employers. The result was "Smart Apply," a tailored, guidance-driven job application process that drove a significant increase in hiring outcomes.
@@ -300,7 +300,7 @@
               I led Indeed's shift to AI-first user experiences, creating an intelligent content engine that collected 215M+ job seeker qualifications and preferences every month to improve matching for millions of job seekers and employers. This shift transformed Indeed from a search-first job board to a recommendations-driven job marketplace, significantly improving satisfaction on both sides.
             </div>
             <div class="card-paragraph">
-              By integrating machine learning throughout the job seeking journey journey, I reduced low-quality job applications by 13M+ every month. I also developed an AI-powered interview scheduling platform that reached 10M+ interviews annually within just 18 months of launch.
+              By integrating machine learning throughout the job seeking journey, I reduced low-quality job applications by 13M+ every month. I also developed an AI-powered interview scheduling platform that reached 10M+ interviews annually within just 18 months of launch.
             </div>
             <div class="card-paragraph">
               Additionally, I drove the first-ever strategic integration between Indeed and Glassdoor, navigating complex stakeholder dynamics to align two sister companies with different priorities and cultures. This success led to a broader partnership where Glassdoor ultimately exited the job search business entirely, creating a united front against competitors and strengthening both companies' market positions.
