Update index.html minor edit to 3rd achievement card

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
               By integrating machine learning throughout the job seeking journey, I reduced low-quality job applications by 13M+ every month. I also developed an AI-powered interview scheduling platform that reached 10M+ interviews annually within just 18 months of launch.
             </div>
             <div class="card-paragraph">
-              Additionally, I drove the first-ever strategic integration between Indeed and Glassdoor, navigating complex stakeholder dynamics to align two sister companies with different priorities and cultures. This success led to a broader partnership where Glassdoor ultimately exited the job search business entirely, creating a united front against competitors and strengthening both companies' market positions.
+              Additionally, I drove the first-ever strategic integration between Indeed and Glassdoor, navigating complex stakeholder dynamics to align two sister companies with different priorities and cultures. This partnership strengthened both companies' market positions against competitors.
             </div>
           </div>
         </div>
