Update index.html - fix line 270

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
           <div class="card-content">
             <h3 class="card-title">Reinventing Marketplace Dynamics</h3>
             <div class="card-paragraph">
-              At Indeed, I led a fundamental shift that transformed the company's flagship job application platform from a volume-focused to a quality-centered marketplace, challenging a decade and a half of company orthodoxy around "ease above all else.
+              At Indeed, I led a fundamental shift that transformed the company's flagship job application platform from a volume-focused to a quality-centered marketplace, challenging a decade and a half of company orthodoxy around "ease above all else".
             </div>
             <div class="card-paragraph">
               This vision required aligning 20+ cross-functional teams across six countries and reimagining the job seeking and hiring journey for 45M+ job seekers and 2M+ employers. The result was "Smart Apply," a tailored, guidance-driven job application process that drove a significant increase in hiring outcomes.
