Update index.html to update meta tags

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
   <link rel="manifest" href="assets/manifest/site.webmanifest">
+  <link rel="canonical" href="https://aditya.pandya.co/" />
 
   <meta name="description" content="Product leader with 15+ years transforming marketplaces and consumer experiences. Scaled products 10x+, drove $6B+ revenue, and built AI-powered solutions used by 100M+ people globally across Indeed, MakeMyTrip, and Directi.">
   <meta name="keywords" content="product leader, product management, growth advisor, B2C platforms, marketplaces, Aditya Pandya, AI/ML product strategy, evidence-driven development, team leadership, Indeed, MakeMyTrip, distributed teams">
@@ -19,11 +20,12 @@
   <meta name="googlebot" content="noai, noimageai">
   <meta name="Bingbot" content="noai, noimageai">
 
-  <meta property="og:title" content="Aditya Pandya • Product Leader & Advisor • Building for 100M+ People • $6B+ Impact">
-  <meta property="og:description" content="Product Leader with 15+ years that transformed Indeed, MakeMyTrip, and Directi. Simplified complexity for 100M+ people, scaled products 10x, and led teams of 150+ across global markets.">
+  <meta property="og:title" content="Aditya Pandya • Product Leader & Advisor • VP Product • Fractional CPO">
+  <meta property="og:description" content="Product leader with 15+ years scaling products to $6B+ revenue and 100M+ people Expertise in marketplaces, AI & growth.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://aditya.pandya.co">
   <meta property="og:image" content="https://aditya.pandya.co/assets/images/ap.jpeg">
+  <meta property="og:url" content="https://aditya.pandya.co">
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="industry" content="HR Tech, Marketplaces, Product Management, B2C">
   <meta name="specialty" content="Product Strategy, Growth, AI/ML Applications, Team Leadership">
   <meta name="experience" content="Indeed, MakeMyTrip, Directi, Startup Advisor">
